# Python_Dev_Project

./: .gitignore  README.md  phase_1.aussie_weather.html
data/: weather_summary.txt
phase_1/: aussie_weather.py
phase_2/: README.md  aussie_weather.py  main.py  pyproject.toml
phase_2/aussie_weather/: PythonDev.code-workspace  __init__.py  loader.py  stats.py  writer.py
phase_2/aussie_weather_sneakytrain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
